--- a/pom.xml
+++ b/pom.xml
@@ -19,23 +19,21 @@
 	<build>
 		<plugins>
 		<plugin>
-    <groupId>org.mule.tools.maven</groupId>
-    <artifactId>mule-maven-plugin</artifactId>
-    <version>2.0</version>
-    <configuration>
-        <deploymentType>standalone</deploymentType>
-        <muleVersion>3.8.0</muleVersion>
-    </configuration>
-    <executions>
-        <execution>
-            <id>deploy</id>
-            <phase>deploy</phase>
-            <goals>
-                <goal>deploy</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin>
+        <groupId>org.mule.tools</groupId>
+        <artifactId>muleesb-maven-plugin</artifactId>
+        <version>1.0</version>
+        <configuration>
+            <muleHome>C:\Mulesoft\mule-standalone-3.8.1</muleHome>
+             </configuration>
+        <executions>
+            <execution>
+                <id>deploy</id>
+                <goals>
+                    <goal>start</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
