Updated POM file to install app in local mule server1

--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,10 @@
         <executions>
             <execution>
                 <id>deploy</id>
+            <phase>deploy</phase>
                 <goals>
                     <goal>start</goal>
+                    <goal>deploy</goal>
                 </goals>
             </execution>
         </executions>
