--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 	<build>
 		<plugins>
 		<plugin>
-        <groupId>org.mule.tools</groupId>
-        <artifactId>muleesb-maven-plugin</artifactId>
-        <version>1.0</version>
+        <groupId>org.mule.tools.maven</groupId>
+    <artifactId>mule-maven-plugin</artifactId>
+    <version>2.0</version>
         <configuration>
             <muleHome>C:\Mulesoft\mule-standalone-3.8.1</muleHome>
              </configuration>
