--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <artifactId>mule-maven-plugin</artifactId>
     <version>2.0</version>
         <configuration>
+            <deploymentType>standalone</deploymentType>
             <muleHome>C:\Mulesoft\mule-standalone-3.8.1</muleHome>
              </configuration>
         <executions>
